Name:                zoom-cache-sndfile

-- The package version. See the Haskell package versioning policy
-- (http://www.haskell.org/haskellwiki/Package_versioning_policy) for
-- standards guiding when and how versions should be incremented.
Version:             0.1.0.0

Synopsis:            Tools for generating zoom-cache-pcm files

-- Description:         

License:             LGPL-2.1
License-file:        LGPL-2.1
Author:              Conrad Parker
Maintainer:          Conrad Parker <conrad@metadecks.org>
Stability:           Experimental
Category:            Sound

Cabal-version:       >=1.2
Build-type:          Simple

-- Extra-source-files:  

Executable zoom-cache-sndfile
  Main-is:           zoom-cache-sndfile.hs
  Hs-Source-Dirs:    ., tools 
  
  Build-depends:
    base < 5,
    bytestring,
    data-default,
    hsndfile,
    hsndfile-vector,
    mtl                       >= 2.0.0.0 && < 3,
    ui-command,
    vector,
    zoom-cache,
    zoom-cache-pcm
  
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  
